components/app-configs/webdav/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: webdav
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: webdav
    deployment: webdav
  sessionAffinity: None
  type: ClusterIP
