components/app-configs/webdav/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: webdav
spec:
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: webdav
    weight: 100
  wildcardPolicy: None
